--- a/InstantWaterHeater.html
+++ b/InstantWaterHeater.html
@@ -426,18 +426,15 @@
         <span class="factortitle">Factors to consider before buying a water heater?</span>
         <span class="custom-title-border  new"></span>
       </div>
-      <div class="d-flex row justify-content-evenly">
-        <div class=" col-md-4 col-sm-5 col-5 my-3 position-relative " >
-          <div class="card shadow rounded-4 py-3 position-absolute top-0 bottom-0" style="min-height: 215px;">
+      <div class="d-flex row justify-content-evenly flex-wrap">
+          <div class="col-md-4 col-sm-5 col-5 my-3  card shadow  card1 rounded-4 py-3 " style="min-height: 215px;">
             <div class="card-body">
               <h5 class="card-title paragraph">1. Usage</h5>
               <p class="card-text">If the water heater is required for occasional use and only 1 or 2 member usage, then
                 go for it. </p>
             </div>
           </div>
-        </div>
-        <div class=" col-md-4 col-sm-5 col-5 my-3 position-relative " >
-          <div class="card shadow rounded-4 py-3 position-absolute top-0 bottom-0" style="min-height: 215px;">
+          <div class="col-md-4 col-sm-5 col-5 my-3  card shadow  card1 rounded-4 py-3 " style="min-height: 215px; ">
             <div class="card-body">
               <h5 class="card-title paragraph">2. Consistent Hot Water
               </h5>
@@ -448,10 +445,7 @@
               </p>
             </div>
           </div>
-
-        </div>
-        <div class=" col-md-4 col-sm-5 col-5 my-3 position-relative " >
-          <div class="card shadow rounded-4 py-3 position-absolute top-0 bottom-0" style="min-height: 215px;">
+          <div class="col-md-4 col-sm-5 col-5 my-3  card shadow  card1 rounded-4 py-3 " style="min-height: 215px;">
             <div class="card-body">
               <h5 class="card-title paragraph">3. Cost/Budget
               </h5>
@@ -460,18 +454,16 @@
               </p>
             </div>
           </div>
-        </div>
-        <div class=" col-md-4 col-sm-5 col-5 my-3 position-relative " >
-          <div class="card shadow rounded-4 py-3 position-absolute top-0 bottom-0" style="min-height: 215px;">
+      </div>
+      <div class="d-flex row justify-content-evenly flex-wrap">
+          <div class="col-md-4 col-sm-5 col-5 my-3  card shadow  card1 rounded-4 py-3 " style="min-height: 215px;">
             <div class="card-body">
               <h5 class="card-title paragraph">4. Energy Saving
               </h5>
               <p class="card-text">Instant water heaters consume less significantly energy.</p>
             </div>
           </div>
-        </div>
-        <div class=" col-md-4 col-sm-5 col-5 my-3 position-relative " >
-          <div class="card shadow rounded-4 py-3 position-absolute top-0 bottom-0" style="min-height: 215px;">
+          <div class=" col-md-4 col-sm-5 col-5 my-3 card shadow  card1 rounded-4 py-3 " style="min-height: 215px;">
             <div class="card-body">
               <h5 class="card-title paragraph">5. Space Requirements
               </h5>
@@ -481,11 +473,6 @@
               </p>
             </div>
           </div>
-
-        </div>
-      </div>
-      <div class="d-flex row justify-content-evenly">
-
       </div>
 
 
@@ -535,7 +522,7 @@
 
   <div class="container-div">
     <div class="mt-5 background text-center font-family py-3 px-5 rounded-4">
-      <img src="/img/instantWaterHeater/post.png" width="150px">
+      <img src="/img/instantWaterHeater/post.png" class="img-note">
       <p class="paragraph mt-3"><strong>Note :</strong> We offer installation by a licensed plumber and experienced
         senior technicians; you can opt for whoever you prefer. Kindly note installation by our certified plumber will
         attract additional charges.</p>
@@ -543,7 +530,7 @@
   </div>
   <!-- Common Problems in using Instant Water Heater: -->
   <div class="container-div my-5 font-family">
-    <ul class="list-group list-unstyled w-50 mx-auto">
+    <ul class="list-group list-unstyled w-50 w-sm-75 mx-auto">
       <li class="list-group mb-4" aria-current="true">
         <h3>Common Problems in using Instant Water Heater</h3>
       </li>
@@ -557,7 +544,7 @@
         <p>3. When using the corroded water heater, it will discharge the discoloured water.</p>
       </li>
     </ul>
-    <ul class="list-group my-5 list-unstyled w-50 mx-auto">
+    <ul class="list-group my-5 list-unstyled w-50  w-sm-75 mx-auto">
       <li class="mb-4" aria-current="true">
         <h3>When Must You Consider Replacing A Water Heater?</h3>
       </li>
@@ -578,8 +565,8 @@
       <div class="text-center py-5">
         <h2 class="maintitle">Maintenance Checklist for Water Heaters</h2>
       </div>
-      <div class="d-flex row justify-content-evenly">
-        <div class="card shadow rounded-4 py-3 col-3">
+      <div class="d-flex row justify-content-evenly flex-wrap">
+        <div class="card shadow card-2 rounded-4 py-3 col-md-3 col-7 my-2 mx-auto">
           <div class="card-body">
             <h5 class="card-title paragraph">Placement of water heaters
             </h5>
@@ -588,7 +575,7 @@
             </p>
           </div>
         </div>
-        <div class="card shadow rounded-4 py-3 col-3">
+        <div class="card shadow card-2 rounded-4 py-3 col-md-3 col-7 my-2 mx-auto">
           <div class="card-body">
             <h5 class="card-title paragraph">Determine water heater type
             </h5>
@@ -598,7 +585,7 @@
             </p>
           </div>
         </div>
-        <div class="card shadow rounded-4 py-3 col-3">
+        <div class="card shadow card-2 rounded-4 py-3 col-md-3 col-7 my-2 mx-auto">
           <div class="card-body">
             <h5 class="card-title paragraph">Make sure the area surrounding your water heater is clear
             </h5>
@@ -641,7 +628,7 @@
   <div class="background mt-3">
     <div class="container-div font-family">
       <div class="text-center pt-3 pb-4">
-        <img src="/img/instantWaterHeater/caution icon.png" style="width: 100px;">
+        <img src="/img/instantWaterHeater/caution icon.png" class="img-caution">
         <h2 class="maintitle mt-3">Caution</h2>
         <div class="w-75 mx-auto mt-4">
           <p>1. Do not try to install a water heater yourself. The improper and inadequate installation will cause
@@ -665,7 +652,6 @@
     </div>
     <div class="row">
       <div class="d-flex col-12 my-4  mx-auto">
-
         <div class="col-5">
           <img src="img/money-back-guarantee-100.png" class="img-fluid float-end" alt="">
         </div>
@@ -674,13 +660,11 @@
             <h5 class="fw-bold">100% Money-Back Guarantee</h5>
             <p class="">We will return your money if you’re not
               satisfied with our services.</p>
-
           </div>
         </div>
       </div>
 
       <div class="d-flex my-4 mx-auto col-12">
-
         <div class="col-5">
           <img src="img/customer-statisfaction.png" class="img-fluid float-end" alt="">
         </div>
@@ -689,14 +673,11 @@
             <h5 class="fw-bold">100% Customer Satisfaction</h5>
             <p class="">We always aim to deliver excellent customer
               satisfaction by offering unbeatable service.</p>
-
           </div>
         </div>
-
       </div>
 
       <div class="d-flex my-4 mx-auto col-12">
-
         <div class="col-5">
           <img src="img/100-Days-Warranty.png" class="img-fluid float-end" alt="">
         </div>
@@ -705,10 +686,8 @@
             <h5 class="fw-bold">100 Days Warranty</h5>
             <p class="">We offer a 100 days workmanship warranty
               for all our services.</p>
-
           </div>
         </div>
-
       </div>
 
       <div class="d-flex my-4 col-12 mx-auto">
@@ -721,7 +700,6 @@
             <h5 class="fw-bold">High-Quality Parts</h5>
             <p class="">We use only the best quality materials for
               all our services.</p>
-
           </div>
         </div>
 
@@ -737,7 +715,6 @@
             <h5 class="fw-bold">Affordable Pricing</h5>
             <p class="">We deliver all our residential property
               maintenance services at a budget-friendly price.</p>
-
           </div>
         </div>
 
@@ -753,7 +730,6 @@
             <h5 class="fw-bold">Expert Team Of Professionals</h5>
             <p class="">Our team of professionals efficiently
               performs all types of home maintenance services.</p>
-
           </div>
         </div>
 
@@ -769,7 +745,6 @@
             <h5 class="fw-bold">No Hidden Charges</h5>
             <p class="">We don’t charge any extra cost for all our
               services.</p>
-
           </div>
         </div>
 
@@ -876,8 +851,8 @@
                 </div>
               </div>
             </div>
-                      </div>
-                      </div> -->
+          </div>
+       </div> -->
   <footer>
     <div class="container-div">
       <div class="row">
@@ -1014,41 +989,7 @@
     integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script type="text/javascript">
-    //                   $('.slider').slick({
-    //   dots: true,
-    //   infinite: true,
-    //   speed: 300,
-    //   slidesToShow: 3,
-    //   slidesToScroll: 3,
-    //   responsive: [
-    //     {
-    //       breakpoint: 1024,
-    //       settings: {
-    //         slidesToShow: 3,
-    //         slidesToScroll: 3,
-    //         infinite: true,
-    //         dots: true
-    //       }
-    //     },
-    //     {
-    //       breakpoint: 600,
-    //       settings: {
-    //         slidesToShow: 2,
-    //         slidesToScroll: 2
-    //       }
-    //     },
-    //     {
-    //       breakpoint: 480,
-    //       settings: {
-    //         slidesToShow: 1,
-    //         slidesToScroll: 1
-    //       }
-    //     }
-    //     // You can unslick at a given breakpoint now by adding:
-    //     // settings: "unslick"
-    //     // instead of a settings object
-    //   ]
-    // });
+          
     $('.slick-carousel-2').slick({
       // @type {string} jQuery Selector
       dots: true,
@@ -1057,7 +998,36 @@
       slidesToShow: 3,
       slidesToScroll: 1,
       nextArrow: '.nextbtn',
-      prevArrow: '.previousbtn'
+      prevArrow: '.previousbtn',
+      // responsive: [
+      //   {
+      //     breakpoint: 1024,
+      //     settings: {
+      //       slidesToShow: 3,
+      //       slidesToScroll: 3,
+      //       infinite: true,
+      //       dots: true
+      //     }
+      //   },
+      //   {
+      //     breakpoint: 600,
+      //     settings: {
+      //       slidesToShow: 2,
+      //       slidesToScroll: 2
+      //     }
+      //   },
+      //   {
+      //     breakpoint: 480,
+      //     settings: {
+      //       slidesToShow: 1,
+      //       slidesToScroll: 1
+      //     }
+      //   }
+      //   // You can unslick at a given breakpoint now by adding:
+      //   // settings: "unslick"
+      //   // instead of a settings object
+      // ]
+    
     });
     $('.slick-carousel-3').slick({
       // @type {string} jQuery Selector
@@ -1081,5 +1051,6 @@
   </script>
 
 </body>
+
 
 </html>
